--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,15 @@ doc/api/
 
 .flutter-plugins
 .flutter-plugins-dependencies
+
+.idea
+android
+ios
+linux
+macos
+test
+web
+windows
+.metadata
+analysis_options.yaml
+
